@@ -47,7 +47,7 @@
  */
 
 
-#if defined(WIN32)
+#if defined(WIN32) && !defined(__MINGW32__)
 #define LIBVNCSERVER_WORDS_BIGENDIAN
 #define rfbBool int
 #include <sys/timeb.h>
@@ -65,7 +65,7 @@
 #endif
 
 
-#if !defined(WIN32)
+#if !defined(WIN32) || defined(__MINGW32__)
 #define max(a,b) (((a)>(b))?(a):(b))
 #ifdef LIBVNCSERVER_HAVE_SYS_TIME_H
 #include <sys/time.h>
