@@ -4,7 +4,7 @@ noinst_HEADERS=VNConsole.h vga.h
 
 CFLAGS_ADD=-I..
 
-LDADD=../libvncserver/libvncserver.a
+LDADD=../libvncserver/libvncserver.a @WSOCKLIB@
 INCLUDES=-I.
 
 if LINUX
@@ -12,7 +12,13 @@ bin_PROGRAMS=LinuxVNC
 LinuxVNC_SOURCES=LinuxVNC.c $(CONSOLE_SRCS)
 endif
 
-noinst_PROGRAMS=VNCommand example
-VNCommand_SOURCES=VNCommand.c $(CONSOLE_SRCS)
+if ! MINGW
+VNCOMMAND=VNCommand
+endif
+
+noinst_PROGRAMS=example $(VNCOMMAND)
 example_SOURCES=example.c $(CONSOLE_SRCS)
+VNCommand_SOURCES=VNCommand.c $(CONSOLE_SRCS)
+
+
 
